# subtitle-lab

./: .gitignore  LICENSE  README.md  build.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
subtitlelab/: __init__.py  cli.py  main.py
subtitlelab/core/: __init__.py  chunker.py  config.py  llm_client.py  models.py  preprocessor.py  processor.py  quality_scorer.py  quality_validator.py  semantic_analyzer.py  speaker_detector.py
subtitlelab/gui/: app.py  components.py  settings_dialog.py  theme.py
subtitlelab/gui/translations/: __init__.py
subtitlelab/gui_backup/: __init__.py  components.py  settings_dialog.py
subtitlelab/tui/: __init__.py  app.py  styles.tcss
subtitlelab/tui/screens/: file_picker.py  settings.py
subtitlelab/utils/: __init__.py  logger.py
tests/: test_cli_flow.py
