[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "subtitlelab"
version = "1.0.0"
description = "Intelligent subtitle post-processing tool with modern GUI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "SubtitleLab Team" }
]
keywords = ["subtitle", "whisper", "llm", "post-processing", "srt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "flet>=0.25.0",
    "openai>=1.0.0",
    "pysubs2>=1.7.0",
    "tenacity>=8.2.0",
    "pydantic>=2.0.0",
    "aiofiles>=23.0.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
subtitlelab = "subtitlelab.main:main"

[tool.hatch.build.targets.wheel]
packages = ["subtitlelab"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
